@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-03T08:24:27Z",
+  "timestamp" : "2022-10-03T16:30:31Z",
   "count_outdated" : 557,
   "uniques_outdated" : 321,
   "count" : 589,
-  "uniques" : 337,
+  "uniques" : 338,
   "clones" : [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -95,6 +95,13 @@
       "count_minmax": [ 3, 6 ],
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ]
+    },
+    {
+      "timestamp": "2022-10-03T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
