@@ -1,10 +1,10 @@
 {
   "count": 32,
-  "uniques": 4,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -66,6 +66,11 @@
       "timestamp": "2022-10-01T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2022-10-03T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
