@@ -1,3 +1,11 @@
+2022-10-03T16:30:31Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3175807076
+* notice: last 14d: unq all: 5 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 321 557 / 337 589
+* notice: next accum: outdated-unq outdated-all / unq all: 321 557 / 338 589
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-19 2022-10-03]
+
 2022-10-03T08:24:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3172662265
 * notice: last 14d: unq all: 4 32
